@@ -120,6 +120,9 @@ Bug Fixes
 
 * SOLR-5418: Background merge after field removed from solr.xml causes error. 
   (Reported on user's list, Robert M's patch via Erick Erickson)
+  
+ * SOLR-5318: Creating a core via the admin API doesn't respect transient property
+   (Olivier Soyez via Erick Erickson)
 
 Optimizations
 ----------------------  
